--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"type": "module",
 	"dependencies": {
 		"@iconify/svelte": "^3.1.6",
+		"@sveltejs/adapter-vercel": "^5.1.0",
 		"@types/socket.io-client": "^3.0.0",
 		"class-variance-authority": "^0.7.0",
 		"firebase": "^10.8.0",
