deploy: wavvy-sup/wavvy-app@26dfbc54b3a94523739ca1493b9b5ac1ee410f3d

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,8 +3,8 @@
 	"short_name": "wavvy",
 	"start_url": "/",
 	"display": "standalone",
-	"theme_color": "#303743",
-	"background_color": "#19212e",
+	"theme_color": "#0FC2C0",
+	"background_color": "#0FC2C0",
 	"icons": [
 		{
 			"src": "/images/icons/icon-192-192.png",
