--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"firebase": "^10.8.0",
 		"firebase-admin": "^12.0.0",
 		"firebase-functions": "^4.7.0",
+		"html5-qrcode": "^2.3.8",
 		"qrcode-scanner-svelte": "^1.0.0",
 		"socket.io-client": "^4.7.4",
 		"svelte-icons": "^2.1.0",
